# libpressio-predict

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  LibPressioPredictConfig.cmake.in  README.markdown  README.md  collect_points.sh  test_external.sh  test_multibuffer.sh
docs/: PressioPredictOptions.md  stability.md
experiments/: core_testing.py  plot.py  serial_parallelized.py  sz_libpressioCLOUD.py  sz_libpressiohacc.py  sz_libpressiotestSCALE.py  sz_scriptCLOUD.py  sz_scriptSCALE.py  sz_scripthacc.py  zfp_libpressioCLOUD.py  zfp_libpressiohacc.py  zfp_libpressiotestSCALE.py  zfp_scriptCLOUD.py  zfp_scriptSCALE.py  zfp_scripthacc.py
experiments/old/: perf_zfp.sh  run_mgard.sh  test_cmdline.sh  test_independent_dependent.sh
experiments/serial_overhead/: nyxdataset_test2.csv  plot_compressors.py  serial_timing.py
include/: libpressio_predict.h  pressio_predictor.h  pressio_reconstructor.h  pressio_sampler.h
include/libpressio_predict_ext/cpp/: predict.h  predict_metrics.h  scheme.h  simple_scheme.h
reproducability/ganguli2023/: README.md
reproducability/ganguli2023/R/: Mahalanabis_distance_metric.R  checking_s_vaalues.R  getting_CR.R  statial_statistics-climate_real_data.R
reproducability/ganguli2023/julia/: err_b.jl  makespan.jl  metrics.jl  order.jl  plots.jl  search.jl  slice.jl  var.jl
src/: libpressio_predict.cc  libpressio_predict.h.in  predict.cc  pressio_predict_bench.cc  pressio_predict_bench_cli.cc  pressio_predict_bench_cli.h  pressio_predict_bench_db.cc  pressio_predict_bench_db.h  pressio_predict_bench_kfold.cc  pressio_predict_bench_kfold.h  pressio_proxy.cc  pressio_reconstructor.cc  pressio_sampler.cc  pressio_sampling.cc
src/plugins/metrics/: bench_metric.cc  khan2023_sz3.cc  khan2023_zfp.cc  rahman2023.cc  sian2022.cc  tao2019.cc
src/plugins/predictor_metrics/: medape.cc
src/plugins/predictors/: khan2023_sz3.cc  khan2023_zfp.cc  noop.cc  python.cc  rahman2023.cc  tao2019.cc
src/plugins/reconstructors/: noop.cc
src/plugins/samplers/: noop.cc
src/plugins/scheme/: base.cc  khan2023_sz3.cc  khan2023_zfp.cc  sian2022.cc  simple.cc  tao2019.cc
src/plugins/search/: predict.cc
src/predictors/: nearest_neighbor.cc
test/: CMakeLists.txt  test_python.cc  test_samplers.cc  test_scheme.cc
